--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <span>Hello World</span>
-    <button>Click Me to Test</button>
+    <button>Click Me</button>
     <script src="events.js"></script>
   </body>
 </html>
